# euler-dataset-contract

./: README.md  pyproject.toml
euler_dataset_contract/: __init__.py  contract.py  registry.py  schema.py  validation.py
tests/: test_validation.py
