[project]
name = "euler-dataset-contract"
version = "0.1.0"
description = "Shared dataset head contracts and namespace validators"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["euler_dataset_contract"]
